# k8s4r

./: .gitignore  ARCHITECTURE.md  DEBUG.md  DOCUMENTATION_CLEANUP.md  Dockerfile.agent  Dockerfile.manager  Dockerfile.server  Makefile  README.md  SUMMARY.md  USAGE.md  go.mod  go.sum  quickstart-taskgroup.sh  quickstart.sh
api/grpc/: robot_manager.pb.go  robot_manager.proto  robot_manager_grpc.pb.go
api/v1alpha1/: groupversion_info.go  job_types.go  robot_types.go  task_types.go  taskgroup_types.go  zz_generated.deepcopy.go
apps/rtele/: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  IMPLEMENTATION.md  MODULE.bazel  README.md  package.xml
apps/rtele/resources/: BUILD.bazel
apps/rtele/src/: BUILD.bazel  CMakeLists.txt  main.cc
apps/rtele/src/config/: BUILD.bazel  rtc_config.cc  rtc_config.h
apps/rtele/src/rtc/: BUILD.bazel  message_consumer.cc  message_consumer.h  rtc_engine.cc  rtc_engine.h
apps/rtele/src/util/: BUILD.bazel  token_generator.cc  token_generator.h  video_file_reader.cc  video_file_reader.h
cmd/agent/: main.go
cmd/manager/: main.go
cmd/server/: main.go
config/agent/: plugins.yaml
config/crd/: robot.k8s4r.io_jobs.yaml  robot.k8s4r.io_robots.yaml  robot.k8s4r.io_taskgroups.yaml  robot.k8s4r.io_tasks.yaml
config/manager/: deployment.yaml
config/mosquitto/: ARCHITECTURE.md  MODE_COMPARISON.md  README.md  mosquitto-hybrid.conf  mosquitto-prod.conf  mosquitto-simple.conf  mosquitto.conf  start-mosquitto.sh  test-mqtt.sh
config/server/: deployment.yaml
config/spire/: agent.conf  server.conf
docs/: ARCHITECTURE_DESIGN.md  DEBUG_GUIDE.md  HOOK_ARCHITECTURE.md  NETWORK_PROXY_ARCHITECTURE.md  NOMAD_EXECUTOR_GUIDE.md  PROCESS_ISOLATION_AND_NETWORKING.md  SPIRE_INTEGRATION.md
examples/: job-auto-schedule.yaml  job-simple.yaml  job-with-artifacts.yaml  job-with-download.yaml  job-with-envoy-proxy.yaml  job-with-selector.yaml  job-with-spire-envoy.yaml  multiple-robots.yaml  robot.yaml  task-docker.yaml  task-exec.yaml  task-ls-demo.yaml  task-raw-exec.yaml  test-concurrent-job.yaml  test-echo-job.yaml  test-inittask-simple.yaml  test-ls-job.yaml  test-taskgroup-simple.yaml
pkg/agent/: envoy_config.go  envoy_config_test.go  task_executor.go  task_executor_test.go  taskgroup_executor.go  taskgroup_executor_test.go  taskgroup_executor_test.go.bak  taskgroup_manager.go
pkg/collector/: device.go
pkg/controller/: job_controller.go  robot_controller.go  task_controller.go  task_controller.go.bak  taskgroup_controller.go
pkg/driver/: exec_driver.go  exec_driver_nomad.go  exec_driver_nomad_test.go  exec_driver_nomad_test.go.bak  raw_exec_driver.go  types.go
pkg/manager/: grpc_server.go  task_stream.go  taskgroup_watcher.go
pkg/plugin/: installer.go  interface.go  manager.go
pkg/plugin/spire/: README.md  agent.go  config.go  integration_test.go  integration_test.go.bak  interface.go  keyring.go  plugin.go  plugin_test.go  workload_api_client.go  workload_client.go
pkg/server/: grpc_stream_server.go  server.go  server.go.bak
pkg/util/: cgroup_hook.go  hooks.go  sharedstorage_hook.go
scripts/: generate-grpc.sh  manage-dev-env.sh  verify-requirements.sh
test/: test_nomad_executor.go
