load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

# Main binary
cc_binary(
    name = "rtele",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
    data = [
        "//resources:1280X720X15XI420.yuv",
        "//resources:48000-stereo-s16le.pcm",
        "//resources:20250812-131830.jpg",
    ],
    deps = [
        "//src/config:config",
        "//src/rtc:rtc_engine",
        "//src/rtc:message_consummer",
        "//src/util:video_file_reader",
        "//third_party/mpmc",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/strings",
        "@opencv//:core",
        "@opencv//:imgcodecs",
        "@opencv//:imgproc",
        "@spdlog",
    ],
)

# Example: If you want to add a library in the future
# cc_library(
#     name = "config",
#     srcs = ["config.cc"],
#     hdrs = ["config.h"],
#     visibility = ["//visibility:public"],
#     deps = [
#         "@com_google_absl//absl/strings",
#     ],
# )
