load("@rules_cc//cc:defs.bzl", "cc_library")

# RTC Engine 封装
cc_library(
    name = "rtc_engine",
    srcs = ["rtc_engine.cc"],
    hdrs = ["rtc_engine.h"],
    visibility = ["//src:__subpackages__"],
    deps = [
        "//src/config:config",
        "//src/util:token_generator",
        "//src/util:video_file_reader",
        "//third_party/mpmc",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
        # "@opencv//:core",
        # "@opencv//:highgui",
        # "@opencv//:imgproc",
        "@spdlog",
    ] + select({
        "@platforms//cpu:aarch64": ["//third_party/VolcEngineRTC_Linux_3.58.1.500_aarch64:volcengine_rtc"],
        "@platforms//cpu:x86_64": ["//third_party/VolcEngineRTC_Linux_x86_64:volcengine_rtc"],
        "//conditions:default": ["//third_party/VolcEngineRTC_Linux_x86_64:volcengine_rtc"],
    }),
)

cc_library(
    name = "message_consummer",
    srcs = ["message_consumer.cc"],
    hdrs = ["message_consumer.h"],
    visibility = ["//src:__subpackages__"],
    deps = [
        "@com_google_absl//absl/strings",
    ],
)
